[package]
name = "streaming-libdeflate-rs"
version = "0.1.6"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
categories = []
description = "Streaming decompression RIIR of libdeflate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guilucand/streaming-libdeflate-rs"

[dependencies]
crc32fast = "1.4.2"
filebuffer = "1.0.0"
static_assertions = "1.1.0"
structopt = "0.3.26"
nightly-quirks = "0.1.4"

[[bin]]
name = "gzipd"
path = "src/bin/gzipd.rs"

[dev-dependencies]
rayon = "1.10.0"
